examples/test/testpolicy10023.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10023
  namespace: namespace229
spec:
  podSelector:
    matchLabels:
      key38: value46
      key45: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value18
          key40: value48
      podSelector:
        matchLabels:
          key40: value35
